--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 # Important Requirements here.
-
+py-Ultroid
+pytgcalls
 https://github.com/New-dev0/Telethon/archive/Tarzan.zip
-py-Ultroid==2021.10.10
-pytgcalls==3.0.0.dev19
+#py-Ultroid==2021.10.10
+#pytgcalls==3.0.0.dev19
+
